# rclone-ui

./: .env.example  .gitignore  README.md  README_CHINESE.md  README_GERMAN.md  README_JAPANESE.md  README_PIRATE.md  README_POLISH.md  README_ROMANIAN.md  README_SPANISH.md  biome.json  index.html  main.ts  meta.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: choco.yml  release-linux-arm.yml  release-linux.yml  release-macos-arm.yml  release-macos.yml  release-windows.yml  release-winget.yml  release.yml  winget.yml  winget2.yml
choco/: rclone-ui.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
cli/: README.md  package.json
cli/lib/: detect.js  install.js  open.js  platform.js
lib/: deep.ts  errors.ts  events.ts  flags.ts  format.ts  fs.ts  hooks.ts  hosts.ts  license.ts  menu.ts  notifications.ts  notify.ts  query.ts  rclone.ts  scheduler.ts  store.ts  tray.ts  window.ts
lib/cloudflared/: common.ts  init.ts
lib/rclone/: api.ts  cli.ts  client.ts  common.ts  constants.ts  init.ts  mount.ts  overrides.ts  requests.ts  versions.ts
public/: browse.html  out.js  tray.html
scripts/: babanizer.js  buildExternal.js  flatpak-cargo-generator.js  rc-request.mjs  release.md
src/: global.css  main.tsx  setupDragRegions.ts
src-tauri/: Cargo.toml  Info.plist  __E.plist  _e.plist  _i.plist  flatpak.metainfo.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/common/: shortcut.rs  window.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_fs.rs  main.rs  zookeeper.rs
src-tauri/src/notifications/: catalog.rs  mod.rs  os.rs  targets.rs  webhooks.rs
src-tauri/src/scheduler/: cronconv.rs  crontab.rs  history.rs  jobfile.rs  launchd.rs  mod.rs  runner.rs  schtasks.rs  storeread.rs  winjob.rs
src/components/: BinarySelect.tsx  CommandInfo.tsx  CommandInfoButton.tsx  CommandsDropdown.tsx  ConfigCreateDrawer.tsx  ConfigEditDrawer.tsx  ConfigSelect.tsx  ConfigSyncDrawer.tsx  CronEditor.tsx  HostAddDrawer.tsx  JobDetailsDrawer.tsx  NotificationTargetDrawer.tsx  OperationWindowContent.tsx  OperationWindowFooter.tsx  OptionsSection.tsx  PathFinder.tsx  PathSelector.tsx  RemoteAutoMountDrawer.tsx  RemoteAvatar.tsx  RemoteCreateDrawer.tsx  RemoteDefaultsDrawer.tsx  RemoteEditDrawer.tsx  RemoteField.tsx  RemoteOptionsSection.tsx  ScheduleEditDrawer.tsx  ShowMoreOptionsBanner.tsx  TauriWatcher.tsx  TemplateAddDrawer.tsx  TemplateEditDrawer.tsx  TemplatesDropdown.tsx
src/components/icons/: ProviderIcon.tsx
src/components/navigator/: FileIcon.tsx  FileList.tsx  FilePanel.tsx  PanelToolbar.tsx  PathBreadcrumb.tsx  PreviewDrawer.tsx  RemoteSidebar.tsx  index.ts  types.ts  useCreateFolder.ts  useFileNavigation.ts  utils.ts
src/components/operation/: AdvancedScheduleSection.tsx  CronSection.tsx  OperationFooter.tsx  OptionsAccordion.tsx  useOperationDryRun.ts  useOptionGroups.ts  useScheduleTask.ts
src/pages/: Bisync.tsx  Commander.tsx  Copy.tsx  Cron.tsx  Delete.tsx  Download.tsx  Home.tsx  Jobs.tsx  Mount.tsx  Move.tsx  Onboarding.tsx  Purge.tsx  Schedules.tsx  Serve.tsx  Settings.tsx  Startup.tsx  Sync.tsx  Templates.tsx  Test.tsx  Toolbar.tsx  Transfers.tsx
src/pages/Settings/: AboutSection.tsx  BaseSection.tsx  BinarySection.tsx  ConfigSection.tsx  GeneralSection.tsx  HostsSection.tsx  LicenseSection.tsx  MobileSection.tsx  NotificationsSection.tsx  ProxySection.tsx  RemotesSection.tsx  ToolbarSection.tsx  index.tsx
store/: host.ts  lib.ts  memory.ts  persisted.ts
toolbar/: actions.ts  constants.ts  engine.ts  types.ts  utils.ts
types/: config.d.ts  cron.d.ts  jobs.d.ts  notifications.d.ts  rclone.d.ts  schedules.d.ts  task.d.ts  template.d.ts
winget/: RcloneUI.Rclone-UI.installer.yaml  RcloneUI.Rclone-UI.locale.en-US.yaml  RcloneUI.Rclone-UI.yaml
