[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [ "tray-icon",  "image-ico",
    "image-png", "config-json5" ] }
tauri-plugin-log = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.2.3"
tauri-plugin-http = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-process = "2"
tauri-plugin-notification = { version = "2.0.0", features = [ "windows7-compat" ] }
tauri-plugin-os = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
zip = "0.6.6"
machine-uid = "0.5.3"
tauri-plugin-sentry = "0.4.1"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
