[package]
name = "app"
version = "2.6.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [ "tray-icon",  "image-ico",
    "image-png", "config-json5" ] }
tauri-plugin-log = "2.7.0"
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-opener = "2.5.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-notification = { version = "2.3.1", features = [ "windows7-compat" ] }
tauri-plugin-os = "2.3.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
zip = "0.6.6"
machine-uid = "0.5.3"
tauri-plugin-sentry = "0.5.0"
sentry = "0.42"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-clipboard-manager = "2.3.0"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
