[package]
name = "app"
version = "3.7.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [ "tray-icon",  "image-ico",
    "image-png", "config-json5" ] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-http = "2.5.9"
tauri-plugin-store = "2.4.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = { version = "2.3.3", features = [ "windows7-compat" ] }
tauri-plugin-os = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
zip = "0.6.6"
machine-uid = "0.6.0"
tauri-plugin-sentry = "0.5.0"
sentry = "0.42"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-prevent-default = "5"
reqwest = { version = "0.13", features = ["json"] }
sysinfo = "0.37"
tinyfiledialogs = { package = "tinyfiledialogs-rs", version = "3.21.3", features = ["windows-hidpi"] }
tauri-plugin-deep-link = "2.4.9"
flate2 = "1.1.9"
tar = "0.4.45"
sha2 = "0.10"
dirs = "6"
# The headless runner's OS toast (notifications/os.rs) — this is tauri-plugin-notification's own
# desktop backend (same locked version), used directly because the plugin's API needs an
# AppHandle and scheduled-run mode never builds a Tauri app.
notify-rust = "4"
uuid = { version = "1", features = ["v4"] }
# Local wall-clock for the macOS launchd catch-up suppression (the runner skips a fire whose
# local minute doesn't match the cron — a wake-catch-up rather than an on-time fire).
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5" }
x11rb = "0.13"
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
# Job-object features: the scheduler runner ties the transient rclone daemon's lifetime to a
# KILL_ON_JOB_CLOSE job (scheduler/winjob.rs) so a hard-killed runner can't orphan it.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
